--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -89,4 +89,10 @@
   <welcome-file-list>
     <welcome-file>index.jsp</welcome-file>
   </welcome-file-list>
+  <jsp-config>
+    <taglib>
+      <taglib-uri>/WEB-INF/hfn</taglib-uri>
+      <taglib-location>/WEB-INF/nkt.tld</taglib-location>
+    </taglib>
+  </jsp-config>
 </web-app>
